--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,16 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
+  <h2>Sign up</h2>
 
 <%#= form_with(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<%= form_with model:User.new, url: registration_path(resource_name) do |f| %>
+<%= form_with model: @user, url: user_registration_path do |f| %>
 <%#= form_with model: @post_image do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <div class="field">
   <%= f.label :name %><br>
-  <%= f.text_field :name %>
+  <%= f.text_field :name,autofocus: true, autocomplete: "name" %>
   </div>
 
   <div class="field">
@@ -29,8 +32,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up",class:"btn btn-success" %></br>
+    <%= render "devise/shared/links" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+</div>
+</div>
