--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html>
   <head>
-    <title>Bookers2</title>
+  <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,42 +9,88 @@
   </head>
 
   <body>
-    <header>
-      
-      <% if user_signed_in? %>
-      
-      <li>
-        <%= link_to 'Homes', user_path(current_user.id) %>
-      </li>
-  
-      <li >
-        <%= link_to "Users", users_path %>
-      </li>
-      
-      <li>
-        <%= link_to 'Books', books_path %>
-      </li>
-  
-      <li >
-        <%= link_to "Log out", destroy_user_session_path,method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "Home", root_path %>
-      </li>
-      <li>
-        <%= link_to "About", about_path %>
-      </li>
-      <li>
-        <%= link_to "Sign up", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "Log in", new_user_session_path %>
-      </li>
-    <% end %>
-  </header>
-    <%= yield %>
-    <footer>
+   <% if user_signed_in? %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+     <div class="container">
+      <div class="row">
+       <h5><%= link_to"Bookers", root_path, class:"nav-link navbar-brand" %></h5></div>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+         
+          <li>
+          <%= link_to  user_path(current_user.id), class:"nav-link text-light" do %>
+          <i class="fas fa-home"></i> Home
+          <% end %>
+          </li>
+         
+          <li>
+          <%= link_to users_path, class:"nav-link text-light" do %>
+          <i class="fas fa-users"></i> Users
+          <% end %>
+          </li>
+          
+          <li>
+          <%= link_to books_path, class:"nav-link text-light" do %>
+          <i class="fas fa-book-open"></i> Books
+          <% end %>
+          </li>
+          
+          <li>
+          <%= link_to destroy_user_session_path,method: :delete, class:"nav-link text-light" do %>
+          <i class="fas fa-sign-out-alt"></i> Log out
+          </li>
+          <% end %>
+          <% else %>
+         
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <div class="container">
+    <%= link_to 'Bookers', root_path,class:"text-light" %>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+     </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       <ul class="navbar-nav ml-auto">
+        
+        <li>
+         <%= link_to root_path,class:"nav-link text-light" do%>
+         <i class="fas fa-home"></i> Home
+         <% end %>
+        </li>
+        
+        <li>
+         <%= link_to about_path,class:"nav-link text-light" do%>
+         <i class="fas fa-link fa-w-16"></i> About
+         <% end %>
+        </li>
+        
+        <li>
+         <%= link_to new_user_registration_path,class:"nav-link text-light" do%>
+         <i class="fas fa-user-plus fa-w-20"></i> Sign up
+         <% end %>
+        </li>
+        
+        <li>
+         <%= link_to new_user_session_path,class:"nav-link text-light" do%>
+         <i class="fas fa-sign-in-alt"></i> Log in
+         <% end %>
+        </li>
+       <% end %>
+        <ul>
+      </div>
+        </ul>
+       </li>
+      </ul>
+     </div>
+    </nav>
+   </header>
+   <p><%= flash[:notice] %></p>
+  <main>
+   <%= yield %>
+  </main>
+<footer>
   <div class="container mt-5">
   	<div class="row">
     	<div class="mx-auto">
@@ -56,4 +100,3 @@
   </div>
 </footer>
   </body>
-</html>
