--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,28 +1,37 @@
-<main>
-        <p id="notice"></p>
-        <div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>User info</h2>
-    <form enctype="multipart/form-data" action="/users/89371" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off"><input type="hidden" name="authenticity_token" value="aRSCcYRgvc6X7bGD9LiQ9tUCoCDeAyZxnQ4G3UBRbHiW64pkTRsu83ekn3ZOzLAS-zIiohbkHNhpAdDBxlgeHg" autocomplete="off">
-      
-      <div class="form-group">
-        <label for="user_name">Name</label>
-        <input class="form-control name" type="text" value="www" name="user[name]" id="user_name">
-      </div>
-     <div class="form-group">
-        <label for="user_image">Image</label>
-        <input class="form-control-file user_image" accept="image/*" type="file" name="user[profile_image]" id="user_profile_image">
-      </div>
-      <div class="form-group">
-        <label for="user_introduction">Introduction</label>
-        <textarea class="form-control introduction" name="user[introduction]" id="user_introduction"></textarea>
-      </div>
-      <div class="form-group">
-        <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User">
-        <% link_to, "edit",edit_users_path %>
-      </div>
-</form>  </div>
-</div>
+<%= form_with model: @user,url:update_user_path(@user.id), method: :patch do |f| %>
+<div class="container">
+<div class="row">
+<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
-      </div></main>
+<h2>User info</h2>
+<% if @user.errors.any? %>
+     <h3><%= @user.errors.count %>errors prohibited this obj from being saved:</h3>
+      <ul>
+      <% @user.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+      <% end %>
+      </ul>
+    <% end %>
+
+<div class="form-group">
+
+  <h6>Name</h6>
+  <%= f.text_field :name %>
+  </div>
+  
+  <div class="form-group">
+  <h6>Image</h6>
+  <%= f.file_field :profile_image, accept: "image/*" %>
+  </div>
+  
+  <div class="form-group">
+  <h6>Introduction</h6>
+  <%= f.text_area :introduction %>
+  </div>
+  
+  <%= f.submit 'Update User',class:"btn btn-secondary" %>
+  
+<% end %>
+</div>
+</div>
+</div>
