--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,45 +1,5 @@
-<div class="container">
- <div class="row">
-   <div class="col-md-3">
-      
-      <h2>User info</h2>
-      <p><%= image_tag @user.get_profile_image(100,100) %></p>
-      <table class="table">
-        <tbody>
-         <tr></tr>
-         <tr>
-          <th>name<th><%= @user.name %></th></th>
-          <th></th>
-         </tr>
-         <tr>
-          <th>introduction<th><%= @user.introduction %></th></th>
-         </tr>
-        </tbody>
-      </table>
-    
-    <%= link_to edit_user_path(@user.id),class:"btn btn-outline-secondary btn-block" do %>
-     <i class="fas fa-user-cog" style="color: #6c757d;"></i>
-     <% end %>
- 
-    <h2 class="mt-3">New book</h2>
-     <%= form_with model: @new_book do |f| %>
-     
-     <div class="form-group">
-      <h6>Title</h6>
-       <%= f.text_field :title %>
-     </div>
-    
-    <div class="form-group"> 
-     <h6>Opinion</h6>
-      <%= f.text_area :body %>
-    </div>
-    
-    <div class="form-group">
-     <%=f.submit 'Create Book',class:"btn btn-success"%>
-    </div>
-     <% end %>
-   </div>
-   
+<%= render 'list', user: @user, new_book: @new_book %>
+
 <div class="col-md-8 offset-md-1">
  <h2>Book detail</h2>
   <table class="table">
